conclusão do cabeçalho

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
     <title>Dance-Dance</title>
 </head>
 <body>
@@ -15,7 +18,24 @@
                 <a href="">Bolero</a>
                 <a href="">Sertanejo</a>
             </nav>
+            <nav>
+                <a href="">YouTube</a>
+                <a href="">Instagram</a>
+                <a href="">X</a>
+                <a href="">Facebook</a>
+            </nav>
+        </div>
+        <div>
+            <img src="img/logo.png" alt="Imagem dançando">
+            <h1>Huguinho Ferreira</h1>
+            <div>
+                <input type="search" placeholder="Buscar">
+                <span class="material-symbols-outlined">search</span>
+            </div>
         </div>
     </header>
+    <main>
+        
+    </main>
 </body>
 </html>
