--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-
+    <script src="https://kit.fontawesome.com/6c2e9979a8.js"></script>
     <title>Dance-Dance</title>
 </head>
 <body>
@@ -35,7 +35,19 @@
         </div>
     </header>
     <main>
-        
+        <iframe src="https://www.youtube.com/embed/Od2uV2kX7E0?si=AUHOP_nzZqf-ZxwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <img src="img/valsa.jpg" alt="">
+        <img src="img/orquestra.png" alt="">
+        <section>
+            <h3>Nos acompanhe nas redes sociais</h3>
+            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-telegram"></i>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-google"></i>
+        </section>
     </main>
 </body>
 </html>
