--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="java.css">
+
     <script src="https://kit.fontawesome.com/6c2e9979a8.js"></script>
     <title>Dance-Dance</title>
 </head>
 <body>
     <header>
-        <div>
+        <div class="d-flex">
             <nav>
                 <a href="">Início</a>
                 <a href="">Forró</a>
@@ -25,7 +27,7 @@
                 <a href="">Facebook</a>
             </nav>
         </div>
-        <div>
+        <div class="d-flex">
             <img src="img/logo.png" alt="Imagem dançando">
             <h1>Huguinho Ferreira</h1>
             <div>
@@ -49,5 +51,98 @@
             <i class="fa-brands fa-google"></i>
         </section>
     </main>
+    <div>
+        <section>
+            <div></div>
+            <h2>Mensagem</h2>
+        </section>
+        <section>
+            <div></div>
+            <h2>Mensagem</h2>
+        </section>
+    </div>
+    <div>
+        <section>
+            <img src="img/hugo.jpg" alt="">
+            <div>
+                <h2>Hugo</h2>
+                <p>Cursando o ensino médio
+                    no IFRN - Santa Cruz</p>
+            </div>
+        </section>
+        <section>
+            <img src="img/hugo.jpg" alt="">
+            <div>
+                <h2>Hugo</h2>
+                <p>Cursando o ensino médio
+                    no IFRN - Santa Cruz</p>
+            </div>
+        </section>
+    </div>
+    <div>
+        <section>
+            <span class="fa-brands fa-spotify"></span>
+            <div>
+                <h2>Spotify</h2>
+                <p>Escute as músicas selecionadas
+                    por nós</p>
+            </div>
+        </section>
+        <section>
+            <span class="fa-brands fa-youtube"></span>
+            <div>
+                <h2>YouTube</h2>
+                <p>Assista aos videoclipes
+                    selecionados por nós</p>
+            </div>
+        </section>
+    </div>
+    <div>
+        <img src="img/orquestra.png" alt="">
+    </div>
+    <footer>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+        <div>
+            <h4>TITULO</h4>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+            <a href="">Mensagem</a>
+        </div>
+    </footer>
 </body>
 </html>
