formatação do main

--- a/index.html
+++ b/index.html
@@ -37,9 +37,18 @@
         </div>
     </header>
     <main>
-        <iframe src="https://www.youtube.com/embed/Od2uV2kX7E0?si=AUHOP_nzZqf-ZxwI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <img src="img/valsa.jpg" alt="">
-        <img src="img/orquestra.png" alt="">
+        <iframe 
+            src="https://www.youtube.com/embed/Od2uV2kX7E0?si=AUHOP_nzZqf-ZxwI" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+        </iframe>
+        <div class="d-flex">
+            <img src="img/valsa.jpg" alt="">
+            <img src="img/orquestra.png" alt="">
+        </div>
         <section>
             <h3>Nos acompanhe nas redes sociais</h3>
             <i class="fa-brands fa-youtube"></i>
